--- a/index.html
+++ b/index.html
@@ -33,14 +33,15 @@
             </ul>
             <p>— The Craft Innovation Hub Team</p>
         </section>
-
-        <section class="registration">
+       
+        <section class="registration contact section" id="contact">
             <h2>Registration</h2>
             <p>Welcome! To join the event, please register below.</p>
-            <form action="#" method="post">
+            <form action="https://formspree.io/f/mzzgbvkn" method="post" class="contact__form">
                 <input type="text" name="fullName" placeholder="Full Name" required>
                 <input type="email" name="email" placeholder="Email Address" required>
-                <input type="tel" name="phone" placeholder="Phone Number" required>
+                <input type="tel" name="phone" placeholder="Phone Number" maxlength="10" pattern="\d*"
+                inputmode="numeric" required>
                 <select name="volunteerType" required>
                     <option value="" disabled selected>Select Volunteer Type</option>
                     <option value="student">Student</option>
@@ -54,6 +55,6 @@
             Powered by Craft Innovation Hub &copy; 2025
         </footer>
     </div>
-
+    <script src="script.js"></script>
 </body>
 </html>
