--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <form action="https://formspree.io/f/mzzgbvkn" method="post" class="contact__form">
                 <input type="text" name="fullName" placeholder="Full Name" required>
                 <input type="email" name="email" placeholder="Email Address" required>
-                <input type="tel" name="phone" placeholder="Phone Number" maxlength="10" pattern="\d*"
+                <input type="tel" name="phone" placeholder="Whatsapp Phone Number" maxlength="10" pattern="\d*"
                 inputmode="numeric" required>
                 <select name="volunteerType" required>
                     <option value="" disabled selected>Select Volunteer Type</option>
